improve resource handling and debug image display in QML
CMakeLists.txt: replace resource file with direct image reference for assets
Main.qml: update debug image source and add opacity for checkerboard display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ qt_add_qml_module(appxcmd-qt
     QML_FILES
         Main.qml
     RESOURCES
-        resources.qrc
+        # hack use proper resource management
+        assets/images/minecraft_missing_texture.png
 )
 
 set_target_properties(appxcmd-qt PROPERTIES
