add initial resource file and update CMakeLists with new policies and resources
CMakeLists.txt: update to use new policies and add resources.qrc to executable
resources.qrc [A]: add initial empty resource file structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.16)
 
 project(xcmd-qt VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt6 6.4 REQUIRED COMPONENTS Quick)
 
 qt_standard_project_setup()
 
+# FIXME use new 0001 and 0004 policy
+
 qt_add_executable(appxcmd-qt
+    resources.qrc
     src/main.cpp
 )
 
