add HexagonShape.qml and integrate it into QML module and main window
CMakeLists.txt: move resources.qrc to QML module RESOURCES section, add HexagonShape.qml to QML module
HexagonShape.qml [A]: add new Shape-based HexagonShape component with gradient and dashed stroke
Main.qml: fix image source path, add HexagonShape item, hide TextPart and HexagonPart with visible false hacks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,6 @@ qt_standard_project_setup()
 
 
 qt_add_executable(appxcmd-qt
-    resources.qrc
     src/main.cpp
 )
 
@@ -23,6 +22,10 @@ qt_add_qml_module(appxcmd-qt
         src/Main.qml
         src/TextPart.qml
         src/HexagonPart.qml
+        src/HexagonShape.qml
+
+    RESOURCES
+      resources.qrc
 )
 
 set_target_properties(appxcmd-qt PROPERTIES
